deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: arch-hw-6-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: arch-hw-6-app
  template:
    metadata:
      labels:
        app: arch-hw-6-app
    spec:
      containers:
        - name: otus-lesson-6
          image: "alexanderrodnin/otus-lesson-6:v1"
          ports:
            - name: web
              containerPort: 8080
