service.yaml
apiVersion: v1
kind: Service
metadata:
  name: arch-hw-6-service
spec:
  selector:
    app: arch-hw-6-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: web
  type: NodePort
